# adCraftParser

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose-local.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/core/: postgres.py
app/dependencies/: postgres.py
app/logger/: __init__.py  formatter.py  logger.py
app/models/orm/: categories.py
app/models/schemas/categories/: base.py  request.py
app/routes/: categories.py
app/services/google/: __init__.py  patch.py  scrape.py  service.py
config/: settings.py
logger/: config.json  logger.py
scrapers/google/: GoogleImageScraper.py  main.py  patch.py
