[tool.poetry]
name = "adcraftai"
version = "0.1.0"
description = ""
authors = ["renren"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
selenium = "^4.20.0"
pydantic = "^2.7.1"
black = "^24.4.2"
pydantic-settings = "^2.2.1"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
